--- a/app/src/main/res/layout/fragment_onboarding2.xml
+++ b/app/src/main/res/layout/fragment_onboarding2.xml
@@ -16,12 +16,8 @@
           android:id="@+id/onboarding_2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="85dp"
-          android:src="@drawable/image_onboarding2"
-          app:layout_constraintBottom_toBottomOf="@id/title2"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
+          android:layout_marginTop="115dp"
+          android:src="@drawable/image_onboarding2"/>
 
       <TextView
           android:id="@+id/title2"
@@ -32,23 +28,17 @@
           android:text="@string/Title_onboarding2"
           android:textColor="@color/white"
           android:textSize="25sp"
-          android:textStyle="bold"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/onboarding_2"/>
+          android:textStyle="bold"/>
 
       <TextView
           android:id="@+id/txt2"
           android:layout_width="270dp"
           android:layout_height="wrap_content"
           android:gravity="center"
+          android:layout_gravity="center"
           android:text="@string/Txt_onboarding2"
           android:textColor="@color/white"
-          android:textSize="18sp"
-          app:layout_constraintTop_toBottomOf="@id/title2"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"/>
-
+          android:textSize="18sp"/>
 
   </LinearLayout>
 
