--- a/app/src/main/res/layout/fragment_onboarding1.xml
+++ b/app/src/main/res/layout/fragment_onboarding1.xml
@@ -11,12 +11,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="40dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/onboarding_1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="380dp"
             android:layout_marginTop="60dp"
             android:src="@drawable/image_onboarding1"/>
 
@@ -25,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:text="@string/Title_onboarding1"
             android:textColor="@color/white"
             android:textSize="25sp"
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
+            android:layout_marginBottom="80dp"
             android:text="@string/Txt_onboarding1"
             android:textColor="@color/white"
             android:textSize="18sp"/>
