--- a/app/src/main/res/layout/fragment_onboarding2.xml
+++ b/app/src/main/res/layout/fragment_onboarding2.xml
@@ -11,12 +11,13 @@
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginBottom="40dp"
       android:orientation="vertical">
       <ImageView
           android:id="@+id/onboarding_2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="115dp"
+          android:layout_marginTop="80dp"
           android:src="@drawable/image_onboarding2"/>
 
       <TextView
@@ -24,7 +25,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
-          android:layout_marginTop="60dp"
+          android:layout_marginTop="30dp"
           android:text="@string/Title_onboarding2"
           android:textColor="@color/white"
           android:textSize="25sp"
@@ -36,6 +37,7 @@
           android:layout_height="wrap_content"
           android:gravity="center"
           android:layout_gravity="center"
+          android:layout_marginBottom="80dp"
           android:text="@string/Txt_onboarding2"
           android:textColor="@color/white"
           android:textSize="18sp"/>
