--- a/app/src/main/res/layout/fragment_register_3.xml
+++ b/app/src/main/res/layout/fragment_register_3.xml
@@ -10,6 +10,11 @@
     tools:context=".Register.FragmentRegister3"
     android:background="@drawable/background_login">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -68,15 +73,16 @@
                 android:layout_gravity="center"
                 android:gravity="center">
 
-                <ImageView
+                <ImageButton
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginRight="8dp"
                     android:padding="40dp"
                     android:background="@drawable/border_white_green_round"
-                    android:src="@drawable/icon_camera"/>
+                    android:src="@drawable/icon_camera"
+                    android:clickable="true"/>
 
-                <ImageView
+                <ImageButton
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginLeft="8dp"
@@ -96,7 +102,7 @@
                     android:layout_gravity="center"
                     android:gravity="center">
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginRight="8dp"
@@ -104,7 +110,7 @@
                         android:background="@drawable/border_white_green_round"
                         android:src="@drawable/icon_camera"/>
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginLeft="8dp"
@@ -125,7 +131,7 @@
                     android:layout_gravity="center"
                     android:gravity="center">
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginRight="8dp"
@@ -133,7 +139,7 @@
                         android:background="@drawable/border_white_green_round"
                         android:src="@drawable/icon_camera"/>
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginLeft="8dp"
@@ -181,4 +187,6 @@
             </LinearLayout>
 
     </LinearLayout>
+
+    </ScrollView>
 </LinearLayout>
