--- a/app/src/main/res/layout/fragment_onboarding2.xml
+++ b/app/src/main/res/layout/fragment_onboarding2.xml
@@ -12,12 +12,13 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginBottom="40dp"
+      android:layout_gravity="center"
+      android:gravity="center"
       android:orientation="vertical">
       <ImageView
           android:id="@+id/onboarding_2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="80dp"
           android:src="@drawable/image_onboarding2"/>
 
       <TextView
@@ -25,7 +26,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
-          android:layout_marginTop="30dp"
+          android:layout_marginTop="40dp"
           android:text="@string/Title_onboarding2"
           android:textColor="@color/white"
           android:textSize="25sp"
