--- a/app/src/main/res/layout/fragment_match_.xml
+++ b/app/src/main/res/layout/fragment_match_.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MatchSuccess.MatchActivity">
+    tools:context=".MatchSuccess.MatchSuccess">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,19 +21,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:orientation="horizontal"
             android:layout_gravity="center">
 
-            <ImageView
+            <ImageButton
+                android:id="@+id/filter_home"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginRight="60dp"
+                android:layout_marginRight="40dp"
                 android:src="@drawable/filter_button"/>
 
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginRight="60dp"
               android:layout_gravity="center"
               android:gravity="center"
               android:orientation="vertical">
@@ -58,13 +60,14 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginLeft="40dp"
                 android:src="@drawable/like_button"/>
 
         </LinearLayout>
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="400dp"
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:background="@color/black"/>
@@ -79,7 +82,7 @@
 
            <ImageButton
                android:id="@+id/swipe_button"
-               android:layout_width="wrap_content"
+               android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
@@ -96,7 +99,7 @@
 
            <ImageButton
                android:id="@+id/match_button"
-               android:layout_width="wrap_content"
+               android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
