--- a/app/src/main/res/layout/activity_recovery_password.xml
+++ b/app/src/main/res/layout/activity_recovery_password.xml
@@ -58,13 +58,13 @@
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
             android:layout_marginTop="18dp"
-            android:background="@drawable/border_red_round"
+            android:background="@drawable/border_green_white_round"
             android:padding="10dp"
             android:text="@string/send_new_password"
             android:textStyle="bold"
             android:textSize="18dp"
             android:textAllCaps="false"
-            android:textColor="@color/white" />
+            android:textColor="@color/green4" />
 
         <!--Back to login-->
         <Button
