--- a/app/src/main/res/layout/fragment_register_2.xml
+++ b/app/src/main/res/layout/fragment_register_2.xml
@@ -180,10 +180,10 @@
                     android:id="@+id/back_r2_button"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/border_white_round"
+                    android:background="@drawable/border_green_white"
                     android:text="@string/back_button"
                     android:textAllCaps="false"
-                    android:textColor="@color/red1"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold"/>
 
@@ -192,10 +192,10 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
-                    android:background="@drawable/border_red_round"
+                    android:background="@drawable/border_green_white_round"
                     android:text="@string/next_button"
                     android:textAllCaps="false"
-                    android:textColor="@color/white"
+                    android:textColor="@color/green4"
                     android:textSize="18sp"
                     android:textStyle="bold"/>
             </LinearLayout>
