--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="red1">#FC5555</color>
     <color name="red2">#E94057</color>
     <color name="green1">#005952</color>
+    <color name="green4">#039588</color>
     <color name="green2">#92DAD2</color>
     <color name="green3">#008C80</color>
 </resources>
