--- a/app/src/main/res/layout/activity_match_success.xml
+++ b/app/src/main/res/layout/activity_match_success.xml
@@ -72,22 +72,22 @@
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@drawable/border_red_round"
+                android:background="@drawable/border_green_white_round"
                 android:text="@string/button_chat"
                 android:textAllCaps="false"
                 android:textSize="18sp"
-                android:textColor="@color/white"
+                android:textColor="@color/green4"
                 android:textStyle="bold"/>
 
             <Button
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@drawable/border_white_round"
+                android:background="@drawable/border_green_white"
                 android:text="@string/button_later"
                 android:textAllCaps="false"
                 android:textSize="18sp"
-                android:textColor="@color/red1"
+                android:textColor="@color/white"
                 android:textStyle="bold"/>
 
         </LinearLayout>
