--- a/app/src/main/res/layout/fragment_match_.xml
+++ b/app/src/main/res/layout/fragment_match_.xml
@@ -55,58 +55,68 @@
                   android:textSize="15sp"
                   android:layout_gravity="center"/>
 
-          </LinearLayout>
+        </LinearLayout>
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="40dp"
-                android:src="@drawable/like_button"/>
+                android:src="@drawable/photo_main"/>
+
+    </LinearLayout>
+
+        <!--Images and buttons-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <!--Cards persons-->
+            <com.yuyakaido.android.cardstackview.CardStackView
+                android:id="@+id/card_stack_view"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
+                android:layout_margin="30dp"
+                android:background="@drawable/border_white_transparent"/>
+
+            Buttons match/swipe
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:paddingBottom="15dp"
+                   android:orientation="horizontal"
+                   android:layout_marginTop="-180dp"
+                   android:layout_gravity="center"
+                   android:gravity="center">
+
+                   <ImageButton
+                       android:id="@+id/swipe_button"
+                       android:layout_width="120dp"
+                       android:layout_height="120dp"
+                       android:layout_marginTop="10dp"
+                       android:layout_marginRight="10dp"
+                       android:background="@android:color/transparent"
+                       android:src="@drawable/swipe_button"/>
+
+                   <ImageButton
+                       android:id="@+id/like_button"
+                       android:layout_width="80dp"
+                       android:layout_height="80dp"
+                       android:layout_marginRight="10dp"
+                       android:background="@android:color/transparent"
+                       android:src="@drawable/like_button"/>
+
+                   <ImageButton
+                       android:id="@+id/match_button"
+                       android:layout_width="120dp"
+                       android:layout_height="120dp"
+                       android:layout_marginTop="10dp"
+                       android:background="@android:color/transparent"
+                       android:src="@drawable/match_button"/>
+
+               </LinearLayout>
 
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:background="@color/black"/>
-
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:paddingBottom="15dp"
-           android:orientation="horizontal"
-           android:layout_gravity="center"
-           android:gravity="center">
-
-           <ImageButton
-               android:id="@+id/swipe_button"
-               android:layout_width="120dp"
-               android:layout_height="wrap_content"
-               android:layout_marginTop="20dp"
-               android:layout_marginRight="10dp"
-               android:background="@android:color/transparent"
-               android:src="@drawable/swipe_button"/>
-
-           <ImageButton
-               android:id="@+id/like_button"
-               android:layout_width="80dp"
-               android:layout_height="80dp"
-               android:layout_marginRight="10dp"
-               android:background="@android:color/transparent"
-               android:src="@drawable/like_button"/>
-
-           <ImageButton
-               android:id="@+id/match_button"
-               android:layout_width="120dp"
-               android:layout_height="wrap_content"
-               android:layout_marginTop="20dp"
-               android:background="@android:color/transparent"
-               android:src="@drawable/match_button"/>
-
-       </LinearLayout>
-
 
     </LinearLayout>
 
