--- a/app/src/main/res/layout/fragment_register_1.xml
+++ b/app/src/main/res/layout/fragment_register_1.xml
@@ -413,10 +413,10 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="40dp"
             android:layout_gravity="center"
-            android:background="@drawable/border_red_round"
+            android:background="@drawable/border_green_white_round"
             android:text="@string/next_button"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@color/green4"
             android:textSize="18sp"
             android:textStyle="bold" />
 
