--- a/app/src/main/res/layout/fragment_register_4.xml
+++ b/app/src/main/res/layout/fragment_register_4.xml
@@ -286,10 +286,10 @@
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
-               android:background="@drawable/border_red_round"
+               android:background="@drawable/border_green_white_round"
                android:text="Crear cuenta"
                android:textAllCaps="false"
-               android:textColor="@color/white"
+               android:textColor="@color/green4"
                android:textSize="18sp"
                android:textStyle="bold" />
 
