--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,16 +9,16 @@
 
     <item
         android:id="@+id/navigation_likes"
-        android:icon="@drawable/star"
+        android:icon="@drawable/menu_heart"
         android:title="" />
 
     <item
-        android:id="@+id/navigation_information"
+        android:id="@+id/navigation_chats_list"
         android:icon="@drawable/info"
         android:title="" />
 
     <item
-        android:id="@+id/navigation_chats"
+        android:id="@+id/navigation_chat"
         android:icon="@drawable/chat"
         android:title="" />
 
