--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -1,60 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_likes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".LikesActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
+    android:orientation="vertical">
+
+    <!--Title likes-->
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/like_title"
-            android:textStyle="bold"
-            android:textColor="@color/green4"
-            android:textSize="25sp"/>
-
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:text="@string/given_likes"
-                android:background="@drawable/border_left_green"
-                android:textAllCaps="false"
-                android:textSize="14dp"
-                android:textColor="@color/white"/>
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:text="@string/received_likes"
-                android:background="@drawable/border_rigth_white"
-                android:textAllCaps="false"
-                android:textSize="14dp"
-                android:textColor="@color/gray"/>
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
+            android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_margin="20dp"/>
+            android:text="@string/like_title"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@color/green3"/>
+        </LinearLayout>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="-40dp"
+            android:background="@color/gray"/>
+    </LinearLayout>
+
+    <!--Buttons likes-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/given_likes_button"
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:text="@string/given_likes"
+            android:background="@drawable/border_left_green"
+            android:textAllCaps="false"
+            android:textColor="@color/white"/>
+
+        <Button
+            android:id="@+id/received_likes_button"
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:text="@string/received_likes"
+            android:background="@drawable/border_rigth_white"
+            android:textAllCaps="false"
+            android:textColor="@color/gray"/>
 
     </LinearLayout>
 
