--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,6 +76,7 @@
                 android:background="@drawable/border_white_transpatent_round"
                 android:hint="@string/hint2"
                 android:padding="8dp"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="15sp"
                 tools:ignore="TouchTargetSizeCheck" />
