--- a/app/src/main/res/layout/bottom_dialog_filter.xml
+++ b/app/src/main/res/layout/bottom_dialog_filter.xml
@@ -86,7 +86,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="38dp"
             android:layout_marginLeft="38dp"
-            android:background="@drawable/border_white_transpatent_round">
+            android:background="@drawable/border_green_soft_transparent_round">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -184,22 +184,22 @@
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
                 android:padding="5dp"
-                android:background="@drawable/border_green_white_round"
+                android:background="@drawable/border_green_round2"
                 android:text="@string/save_filters"
                 android:textSize="16sp"
                 android:textAllCaps="false"
-                android:textColor="@color/green4"/>
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/clear_filter"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:background="@drawable/border_red_transparent"
+                android:background="@drawable/border_green_transparent_round"
                 android:padding="5dp"
                 android:text="@string/clear_filters"
                 android:textSize="16sp"
                 android:textAllCaps="false"
-                android:textColor="@color/red1"/>
+                android:textColor="@color/green3"/>
 
         </LinearLayout>
 
