--- a/app/src/main/res/layout/card_person.xml
+++ b/app/src/main/res/layout/card_person.xml
@@ -16,13 +16,23 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
+    <!--Person information-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:gravity="center|bottom"
         android:layout_gravity="bottom"
-        android:gravity="center"
-        android:padding="16dp"
         android:background="@drawable/gradient_black">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:padding="16dp"
+            android:orientation="horizontal">
 
         <TextView
             android:id="@+id/card_person_name"
@@ -37,11 +47,24 @@
             android:id="@+id/card_person_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:text=" 26"
+            android:text="26"
             android:textSize="20sp"/>
     </LinearLayout>
+
+        <TextView
+            android:id="@+id/card_person_job"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-30dp"
+            android:textColor="@color/white"
+            android:text="hace algo"
+            android:textSize="18sp"/>
+
+    </LinearLayout>
+
 
     <FrameLayout
         android:id="@+id/left_overlay"
