--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -29,11 +29,12 @@
             android:textStyle="bold"
             android:textColor="@color/green3"/>
         </LinearLayout>
+
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="-40dp"
-            android:background="@color/gray"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="-50dp"
+            android:src="@drawable/photo_main"/>
     </LinearLayout>
 
     <!--Buttons likes-->
