--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,11 +30,21 @@
                 android:textColor="@color/green3"/>
         </LinearLayout>
 
-        <ImageView
+        <androidx.cardview.widget.CardView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="-50dp"
-            android:src="@drawable/photo_main"/>
+            app:cardElevation="0dp"
+            app:cardCornerRadius="30dp">
+
+            <ImageView
+                android:id="@+id/profile_from_chats"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/photo_main"/>
+        </androidx.cardview.widget.CardView>
+
+
     </LinearLayout>
 
     <!--Search by name-->
