--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -30,11 +30,19 @@
             android:textColor="@color/green3"/>
         </LinearLayout>
 
-        <ImageView
+        <androidx.cardview.widget.CardView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="-50dp"
-            android:src="@drawable/photo_main"/>
+            app:cardElevation="0dp"
+            app:cardCornerRadius="30dp">
+
+            <ImageView
+                android:id="@+id/profile_from_likes"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/photo_main"/>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
     <!--Buttons likes-->
