--- a/app/src/main/res/layout/fragment_register_4.xml
+++ b/app/src/main/res/layout/fragment_register_4.xml
@@ -72,7 +72,7 @@
                    android:orientation="horizontal">
 
                    <Button
-                       android:id="@+id/button_photography"
+                       android:id="@+id/button_photo_preference"
                        android:layout_width="120dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="5dp"
